<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pkg</name>
  <version>0.0.0</version>
  <description>a package for research</description>
  <maintainer email="tamura.nihiro@irl.sys.es.osaka-u.ac.jp">Nihiro Tamura</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>collections</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>csv</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>time</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
